resolves #1526 -- removes uni-form z-index reset, also fixes other uni-form styling issues

--- a/recollection/static/stylesheets/base.css
+++ b/recollection/static/stylesheets/base.css
@@ -554,5 +554,5 @@ p.tip {
     margin: 0 0 1em;
 }
 
-.ui-dialog-content .uniForm,.ui-dialog-content.uniForm {z-index: 1002;}
+/*.ui-dialog-content .uniForm,.ui-dialog-content.uniForm {z-index: 10000;}*/
 
